atualizações para formulario e adicao da pagina condicoes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,14 +3,14 @@
         <div uk-navbar>
             <a href="" class="uk-navbar-item uk-logo uk-visible@l"><img src="assets/ardor.png" alt=""></a>
             <div class="uk-navbar-center uk-visible@m">
-                <ul class="uk-navbar-nav">
+                <ul class="uk-navbar-nav" >
                     <li><a href="#">sobre nós</a></li>
                     <li><a href="#">o que vai aprender</a></li>
                 </ul>
             </div>
 
             <div class="uk-navbar-right">
-                <button class="uk-button uk-button-primary uk-border-rounded">Solicitar</button>
+                <button class="uk-button uk-button-primary uk-border-rounded" routerLink="/form">Solicitar</button>
             </div>
         </div>
 
