--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,65 +1,75 @@
-<div class="uk-container  uk-margin-top">
-    <div class="uk-section uk-section-muted uk-padding uk-border-rounded">
-    <div class="uk-grid uk-child-width-1-2@l" uk-grid>
-        <div>
-            <h1>Desenvovimento web Framework Angular e Uikit</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima earum quia quos excepturi, dolorem alias id reiciendis expedita laborum officiis, pariatur distinctio debitis! Dolore aspernatur pariatur dicta nemo, ea hic?
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, sapiente temporibus iusto sit accusamus repellat minus, sint eum minima dicta quae officia provident. Aliquam molestias nobis asperiores quasi vero!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellendus, nihil laboriosam nisi totam, soluta iusto fugiat voluptate illum itaque delectus alias! Ex, deleniti? Laboriosam maiores quasi vero voluptate culpa!
-            </p>
-        </div>
-        <div>
-            <img width="600" height="400" src="assets/programming.png" alt="">
-        </div>
-    </div>
-    </div>
-</div>
-<hr class="uk-grid-divider">
-<div  class="uk-section uk-padding uk-border-rounded uk-section-primary uk-preserve-color">
-    <div class="uk-container ">
-        <div class="uk-grid uk-child-width-1-3@l" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500; repeat: true" uk-grid>
-            <div class="uk-card uk-card-body uk-card-default">
-                <h3 class="uk-text-center">Poque aprende o Angular?</h3>
-                <img src="assets/angular.svg" alt="">
-                <p class="uk-text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima earum quia quos excepturi, dolorem alias id reiciendis expedita laborum officiis, pariatur distinctio debitis! Dolore aspernatur pariatur dicta nemo, ea hic?
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, sapiente temporibus iusto sit accusamus repellat minus, sint eum minima dicta </p>
-                <button class="uk-button uk-button-primary uk-width-1-1">saiba Mais</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="uk-container  uk-margin-top">
+        <div class="uk-section uk-section-muted uk-padding uk-border-rounded">
+        <div class="uk-grid uk-child-width-1-2@l" uk-grid>
+            <div>
+                <h1>Desenvovimento web Framework Angular e Uikit</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima earum quia quos excepturi, dolorem alias id reiciendis expedita laborum officiis, pariatur distinctio debitis! Dolore aspernatur pariatur dicta nemo, ea hic?
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, sapiente temporibus iusto sit accusamus repellat minus, sint eum minima dicta quae officia provident. Aliquam molestias nobis asperiores quasi vero!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellendus, nihil laboriosam nisi totam, soluta iusto fugiat voluptate illum itaque delectus alias! Ex, deleniti? Laboriosam maiores quasi vero voluptate culpa!
+                </p>
             </div>
             <div>
+                <img width="600" height="400" src="assets/programming.png" alt="">
+            </div>
+        </div>
+        </div>
+    </div>
+    <hr class="uk-grid-divider">
+    <div  class="uk-section uk-padding uk-border-rounded uk-section-primary uk-preserve-color">
+        <div class="uk-container ">
+            <div class="uk-grid uk-child-width-1-3@l" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500; repeat: true" uk-grid>
                 <div class="uk-card uk-card-body uk-card-default">
-                    <h3 class="uk-text-center">Poque aprende o Uikit?</h3>
-                    <img src="assets/uikit.svg" alt="" >
+                    <h3 class="uk-text-center">Poque aprende o Angular?</h3>
+                    <img src="assets/angular.svg" alt="">
                     <p class="uk-text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima earum quia quos excepturi, dolorem alias id reiciendis expedita laborum officiis, pariatur distinctio debitis! Dolore aspernatur pariatur dicta nemo, ea hic?
-                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, sapiente temporibus iusto sit accusamus repellat minus, sint eum minima dicta     </p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, sapiente temporibus iusto sit accusamus repellat minus, sint eum minima dicta </p>
                     <button class="uk-button uk-button-primary uk-width-1-1">saiba Mais</button>
                 </div>
+                <div>
+                    <div class="uk-card uk-card-body uk-card-default">
+                        <h3 class="uk-text-center">Poque aprende o Uikit?</h3>
+                        <img src="assets/uikit.svg" alt="" >
+                        <p class="uk-text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima earum quia quos excepturi, dolorem alias id reiciendis expedita laborum officiis, pariatur distinctio debitis! Dolore aspernatur pariatur dicta nemo, ea hic?
+                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, sapiente temporibus iusto sit accusamus repellat minus, sint eum minima dicta     </p>
+                        <button class="uk-button uk-button-primary uk-width-1-1">saiba Mais</button>
+                    </div>
+                </div>
+    
+                <div>
+                    <div class="uk-card uk-card-body uk-card-default">
+                        <h3 class="uk-text-center">Como intergrar o uikit em angular</h3>
+                        <img src="assets/intergrar.svg" alt="" >
+                        <p class="uk-text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima earum quia quos excepturi, dolorem alias id reiciendis expedita laborum officiis, pariatur distinctio debitis! Dolore aspernatur pariatur dicta nemo, ea hic?
+                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, sapiente temporibus iusto sit accusamus repellat minus, sint eum minima dicta     </p>
+                        <button class="uk-button uk-button-primary uk-width-1-1">saiba Mais</button>
+                    </div>
+                </div>
             </div>
-
+        </div>
+    </div>
+    <div class="uk-container  uk-margin-top">
+        <div class="uk-section uk-section-muted uk-padding uk-border-rounded">
+        <div class="uk-grid uk-child-width-1-2@l" uk-grid>
             <div>
-                <div class="uk-card uk-card-body uk-card-default">
-                    <h3 class="uk-text-center">Como intergrar o uikit em angular</h3>
-                    <img src="assets/intergrar.svg" alt="" >
-                    <p class="uk-text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima earum quia quos excepturi, dolorem alias id reiciendis expedita laborum officiis, pariatur distinctio debitis! Dolore aspernatur pariatur dicta nemo, ea hic?
-                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, sapiente temporibus iusto sit accusamus repellat minus, sint eum minima dicta     </p>
-                    <button class="uk-button uk-button-primary uk-width-1-1">saiba Mais</button>
-                </div>
+                <h1>O que já fizemos com esssas framework</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima earum quia quos excepturi, dolorem alias id reiciendis expedita laborum officiis, pariatur distinctio debitis! Dolore aspernatur pariatur dicta nemo, ea hic?
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, sapiente temporibus iusto sit accusamus repellat minus, sint eum minima dicta quae officia provident. Aliquam molestias nobis asperiores quasi vero!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellendus, nihil laboriosam nisi totam, soluta iusto fugiat voluptate illum itaque delectus alias! Ex, deleniti? Laboriosam maiores quasi vero voluptate culpa!
+                </p>
+            </div>
+            <div>
+                <iframe src="https://www.facebook.com/plugins/video.php?height=316&href=https%3A%2F%2Fweb.facebook.com%2Ffluxodigi%2Fvideos%2F1000367457773846%2F&show_text=false&width=560&t=0" width="560" height="316" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
             </div>
         </div>
-    </div>
-</div>
-<div class="uk-container  uk-margin-top">
-    <div class="uk-section uk-section-muted uk-padding uk-border-rounded">
-    <div class="uk-grid uk-child-width-1-2@l" uk-grid>
-        <div>
-            <h1>O que já fizemos com esssas framework</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima earum quia quos excepturi, dolorem alias id reiciendis expedita laborum officiis, pariatur distinctio debitis! Dolore aspernatur pariatur dicta nemo, ea hic?
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, sapiente temporibus iusto sit accusamus repellat minus, sint eum minima dicta quae officia provident. Aliquam molestias nobis asperiores quasi vero!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellendus, nihil laboriosam nisi totam, soluta iusto fugiat voluptate illum itaque delectus alias! Ex, deleniti? Laboriosam maiores quasi vero voluptate culpa!
-            </p>
-        </div>
-        <div>
-            <iframe src="https://www.facebook.com/plugins/video.php?height=316&href=https%3A%2F%2Fweb.facebook.com%2Ffluxodigi%2Fvideos%2F1000367457773846%2F&show_text=false&width=560&t=0" width="560" height="316" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
         </div>
     </div>
-    </div>
-</div>
+</body>
+</html>
