--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
             <div class="uk-navbar-center uk-visible@m">
                 <ul class="uk-navbar-nav" >
                     <li><a href="#">sobre nós</a></li>
-                    <li><a href="#">o que vai aprender</a></li>
+                    <li><a href="#oquevaiapender">o que vai aprender</a></li>
                 </ul>
             </div>
 
