--- a/src/app/components/navbardown/navbardown.component.html
+++ b/src/app/components/navbardown/navbardown.component.html
@@ -4,8 +4,8 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.19/dist/js/uikit-icons.min.js"></script>
 
 <hr class="uk-hr-large uk-margin-large-top">
-<div class="uk-card-footer uk-card-body">
-    <div class="uk-container uk-child-width-1-2 ">
+<div class="uk-container uk-margin-large-bottom">
+    <div class="uk-container uk-grid  uk-child-width-1-2@m ">
         <div class="uk-card">
             <div class="uk-card-body">
                 <h3 class="uk-card-title uk-text-bold">Onde nos encontrar</h3>
@@ -17,6 +17,13 @@
                     <a href="" class="uk-icon-button  uk-margin-small-right" uk-icon="icon: facebook; ratio: 2"></a>
                     <a href="" class="uk-icon-button" uk-icon="icon: youtube; ratio:2"></a>
                 </div>
+            </div>
+        </div>
+        <div class="uk-card">
+            <div class="uk-card-body">
+                <h3 class="uk-card-title uk-text-bold">Contacto</h3>
+                <a href="http://fluxo-digital.com/" class="uk-link-muted" target="_blank">Site da FluxoDigital</a>
+                
             </div>
         </div>
     </div>
