--- a/src/app/components/termos/termos.component.html
+++ b/src/app/components/termos/termos.component.html
@@ -6,6 +6,45 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Temos e condicoes</h1>
+    <div class="uk-container">
+        <h1>Política de Privacidade - Site de Inscrição</h1>
+        <p>
+            [Seu nome/empresa] respeita a privacidade de todos os usuários que se inscrevem em nosso site e está comprometido em proteger suas informações pessoais. Esta política de privacidade descreve como coletamos, usamos, armazenamos e protegemos as informações pessoais dos usuários do nosso site de inscrição. Ao se inscrever em nosso site, você concorda com os termos desta política de privacidade.
+        </p>
+        <ul class="uk-list uk-list-decimal">
+            <li>Informações Coletadas
+                <p>Ao se inscrever em nosso site, podemos coletar as seguintes informações pessoais do usuário:</p>
+                <ul class="uk-list uk-list-bullet">
+                    <li> O que é Angular e por que é usado?</li>
+                    <li>Diferença entre AngularJS e Angula</li>
+                    <li>Visão geral da arquitetura e componentes principais</li>
+                </ul>
+            </li>
+            <li>Uso das Informações
+                <p>As informações pessoais coletadas serão usadas exclusivamente para os seguintes fins:</p>
+                <ul class="uk-list uk-list-bullet">
+                    <li> Processar sua inscrição no bootcamp horários, localização, atualizações e materiais relacionados</li>
+                    <li>Comunicar informações relevantes sobre o bootcamp, como confirmação de inscrição</li>
+                    <li>Entrar em contato com você caso haja alterações no evento ou em questões relacionadas à sua inscrição</li>
+                    <li>Melhorar nossos serviços e o conteúdo oferecido em nosso site</li>
+                </ul>
+            </li>
+            <li>Armazenamento das Informações
+                <p>As informações pessoais dos usuários serão armazenadas em um ambiente seguro e protegido contra acesso não autorizado. Manteremos suas informações apenas pelo tempo necessário para cumprir os propósitos para os quais foram coletadas, a menos que a lei exija ou permita o armazenamento por um período mais longo</p>
+            </li>
+            <li>Compartilhamento de Informações
+                <p>Não compartilharemos, venderemos, alugaremos ou divulgaremos suas informações pessoais a terceiros, exceto quando necessário para os fins da inscrição e processamento do evento ou quando exigido por lei.</p>
+            </li>
+            <li>
+                Alterações na Política de Privacidade
+                <p>Podemos atualizar esta política de privacidade de tempos em tempos. Quaisquer alterações serão publicadas em nosso site e a data de vigência será atualizada. Encorajamos os usuários a revisar periodicamente esta política para se manterem informados sobre como protegemos suas informações.</p>
+            </li>
+            <li>Contato
+                <p>Se você tiver alguma dúvida, preocupação ou solicitação relacionada à privacidade de suas informações pessoais, entre em contato conosco através dos canais fornecidos em nosso site.</p>
+                <p>Ao prosseguir com sua inscrição em nosso site, você está ciente e concorda com os termos desta política de privacidade. Agradecemos por confiar em [Seu nome/empresa] e estamos comprometidos em proteger suas informações pessoais com responsabilidade e transparência.</p>
+            </li>
+        </ul>
+    </div>
+   
 </body>
 </html>
