--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -8,56 +8,83 @@
             <div class="uk-container uk-container-large ">
                 <div class="uk-card uk-card-default uk-card-body uk-hight-large">
                     <div uk-slideshow>
-                        <ul class="uk-slideshow-items " >
+                        <form class="uk-form" [formGroup]="form" (submit)="submeter()" #formDir="ngForm">
+                            <ul class="uk-slideshow-items " >
                             <li>
-                                <form class="uk-form">
-                                    <fieldset class="uk-fieldset uk-margin-bottom">
-                                        <h3 class="uk-text-primary uk-text-large uk-text-bold uk-text-center uk-margin-top">Solicite aqui a sua incricao para o curso</h3>
-                                        <div class="uk-margin-top">
-                                            <label class="uk-form-label uk-text-large uk-margin-bottom" for="nome">Nome completo</label>
-                                            <input type="text" class="uk-input" id="nome" placeholder="Nome Completo" aria-label="Input">
+                                <fieldset class="uk-fieldset uk-margin-bottom">
+                                    <h3 class="uk-text-primary uk-text-large uk-text-bold uk-text-center uk-margin-top">Solicite aqui a sua incricao para o curso</h3>
+                                    <div class="uk-margin-top">
+                                        <label class="uk-form-label uk-text-large uk-margin-bottom" for="nome">Nome completo</label>
+                                        <input formControlName="nome_completo" type="text" class="uk-input" id="nome" placeholder="Nome Completo" aria-label="Input">
+                                        <div *ngIf="nome_completo.invalid && formDir.submitted">
+                                            <p *ngIf="nome_completo.errors?.['required']">
+                                                    este campo é obigatório !
+                                            </p>
                                         </div>
-                                        <div class="uk-margin-top">
-                                            <label class="uk-form-label uk-text-large " for="email">email</label>
-                                            <input type="text" class="uk-input " id="email" placeholder="e-mail" aria-label="Input">
+                                    </div>
+                                    <div class="uk-margin-top">
+                                        <label class="uk-form-label uk-text-large " for="email">email</label>
+                                        <input formControlName="email" type="text" class="uk-input " id="email" placeholder="e-mail" aria-label="Input">
+                                        <div *ngIf="email.invalid && formDir.submitted">
+                                            <p *ngIf="email.errors?.['required']">
+                                                este campo é obigatório !
+                                            </p>
+                                            <p *ngIf="email.errors?.['email']">
+                                                email inválido !
+                                            </p>
                                         </div>
-                                        <div class="uk-margin-top">
-                                            <label class="uk-form-label uk-text-large " for="telefone">Telefone</label>
-                                            <input type="text" class="uk-input" placeholder="Telefone" aria-label="Input">
+                                    </div>
+                                    <div class="uk-margin-top">
+                                        <label class="uk-form-label uk-text-large " for="telefone">Telefone</label>
+                                        <input formControlName="telefone" type="text" class="uk-input" placeholder="Telefone" aria-label="Input">
+                                        <div *ngIf="telefone.invalid && formDir.submitted">
+                                            <p *ngIf="telefone.errors?.['required']">
+                                                    este campo é obigatório !
+                                            </p>
                                         </div>
-                                        <div class="uk-margin-top">
-                                            <label class="uk-text-large">Tens algum conhecimento em:</label><br>
-                                            <div class="uk-margin uk-grid-large uk-child-width-auto uk-grid uk-text-large">
-                                                <label for=""> <input type="checkbox" class="uk-checkbox" name="" id=""> Angular</label>
-                                                <label for=""> <input type="checkbox" class="uk-checkbox" name="" id=""> Typescripts</label>
-                                                <label for=""> <input type="checkbox" class="uk-checkbox" name="" id=""> HTML e CSS</label>
-                                            </div>
+                                    </div>
+                                    <div class="uk-margin-top">
+                                        <label class="uk-text-large">Tens algum conhecimento em:</label><br>
+                                        <div class="uk-margin uk-grid-large uk-child-width-auto uk-grid uk-text-large">
+                                            <label for=""> <input type="checkbox" class="uk-checkbox" name="" id="" value="Angular" formControlName="angluar"> Angular</label>
+                                            <label for=""> <input type="checkbox" class="uk-checkbox" name="" id="" formControlName="typescripts"> Typescripts</label>
+                                            <label for=""> <input type="checkbox" class="uk-checkbox" name="" id="" formControlName="htmlcss"> HTML e CSS</label>
+                                        </div>
                                             
+                                    </div>
+                                    <div class="uk-margin-top">
+                                        <label for="" class="uk-text-large"> Por que você deseja fazer o curso de Capacitação em Angular?</label>
+                                        <textarea formControlName="texto"  class="uk-textarea uk-height-small" name="" id="" cols="30" rows="10"></textarea>
+                                        <div *ngIf="texto.invalid && formDir.submitted">
+                                            <p *ngIf="texto.errors?.['required']">
+                                                    este campo é obigatório !
+                                            </p>
                                         </div>
-                                        <div class="uk-margin-top">
-                                            <label for="" class="uk-text-large"> Por que você deseja fazer o curso de Capacitação em Angular?</label>
-                                            <textarea class="uk-textarea uk-height-small" name="" id="" cols="30" rows="10"></textarea>
-                                        </div>
-                                        <a class="uk-position-bottom-right uk-position-small " href="#" uk-slidenav-next uk-slideshow-item="slideX"></a>
-                                    </fieldset>
-                                </form>
+                                        
+                                    </div>
+                                    <a class="uk-position-bottom-right uk-position-small " href="#" uk-slidenav-next uk-slideshow-item="slideX"></a>
+                                </fieldset>
                             </li>
                             <li>
-                                <form class="uk-form">
+                             
                                     <fieldset class="uk-fieldset uk-margin-bottom">
                                         <div class="uk-margin-top">
                                             <label for="" class="uk-text-large"> Quais são suas expectativas em relação ao curso?</label>
-                                            <textarea class="uk-textarea uk-height-small" name="" id="" cols="30" rows="10"></textarea>
+                                            <textarea formControlName="espectativas" class="uk-textarea uk-height-small" name="" id="" cols="30" rows="10"></textarea>
+                                            <div *ngIf="espectativas.invalid && formDir.submitted">
+                                                <p *ngIf="espectativas.errors?.['required']">
+                                                        este campo é obigatório !
+                                                </p>
+                                            </div>
                                         </div>
                                         <a class="uk-position-bottom-left uk-position-small " href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-                                        <button type="button" class="uk-button uk-position-bottom-right uk-button-primary">Enviar</button>
+                                        
                                         <p class="uk-text-large">Seus dados pessoais (e-mail, nome pessoal e número de celular) são usados apenas para fins de comunicação e não são compartilhados com terceiros <a href="" routerLink="/temos e condições" class="uk-text-muted">saiba mais</a></p>
+                                    <button type="submit"  class="uk-button uk-position-bottom-right uk-button-primary">Enviar</button>
                                     </fieldset>
-                                    
-                                </form>
                             </li>
-                        </ul>
-                        
+                            </ul>
+                        </form>
                     </div>
                     
                 </div>
