--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,11 +20,11 @@
         
     </div>
     <div class="uk-container  uk-margin-top">
-        <div class="uk-section uk-section-muted uk-padding uk-border-rounded">
+        <div class="uk-section uk-section-muted uk-padding uk-border-rounded uk-text-center">
         <div class="uk-grid uk-child-width-1-2@l" uk-grid>
             <div>
                 <h1>Desenvovimento web Framework Angular e Uikit</h1>
-                <p>Bem-vindo ao Bootcamp ProAngular+UIKit, uma oportunidade única para você se tornar um especialista nas tecnologias mais avançadas de desenvolvimento web. Neste bootcamp, você mergulhará fundo no mundo do Angular e do UIKit, guiado por instrutor experiente, com ênfase na criação de projetos práticos e inovadores. Prepare-se para impulsionar sua carreira no desenvolvimento front-end e construir aplicações web incríveis.
+                <p class="uk-text-justify">Bem-vindo ao Bootcamp ProAngular+UIKit, uma oportunidade única para você se tornar um especialista nas tecnologias mais avançadas de desenvolvimento web. Neste bootcamp, você mergulhará fundo no mundo do Angular e do UIKit, guiado por instrutor experiente, com ênfase na criação de projetos práticos e inovadores. Prepare-se para impulsionar sua carreira no desenvolvimento front-end e construir aplicações web incríveis.
                 </p>
             </div>
             <div>
@@ -34,10 +34,10 @@
         </div>
     </div>
     <hr class="uk-grid-divider">
-    <div  class="uk-section uk-padding uk-border-rounded uk-section-primary uk-preserve-color">
+    <div  class="uk-section uk-padding uk-border-rounded uk-section-primary uk-preserve-color uk-visible@l">
         <div class="uk-container ">
-            <h1 id="oquevaiapender" class="uk-margin-large-bottom uk-text-large uk-text-bold">O que vai aprender</h1><br>
-            <div class="uk-grid uk-child-width-1-3@l" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500; repeat: true" uk-grid>
+            <h1 id="oquevaiapender" class="uk-margin-large-bottom uk-text-large uk-text-bold uk-visible@l">O que vai aprender</h1><br>
+            <div class="uk-grid uk-child-width-1-3@l uk-visible@l " uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500; repeat: true" uk-grid>
                 <div class="uk-card uk-card-body uk-card-default">
                     <h3 class="uk-text-center">Poque aprende o Angular?</h3>
                     <img src="assets/angular.svg" alt="">
@@ -64,8 +64,70 @@
             </div>
         </div>
     </div>
-    <div class="uk-container  uk-margin-top">
-        <div class="uk-section uk-section-muted uk-padding uk-border-rounded">
+    <!--Mobile listas dos cursos tableta-->
+    <div  class="uk-section uk-padding uk-border-rounded uk-section-primary uk-preserve-color uk-visible@m uk-hidden@l">
+        <div class="uk-container ">
+            <h1 id="oquevaiapender" class="uk-margin-large-bottom uk-text-large uk-text-bold uk-visible@m uk-hidden@l">O que vai aprender</h1><br>
+            <div class="uk-grid-medium uk-child-width-1-2@m uk-visible@m uk-hidden@l" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500; repeat: true" uk-grid>
+                <div class="uk-card uk-card-body uk-card-default">
+                    <h3 class="uk-text-center">Poque aprende o Angular?</h3>
+                    <img src="assets/angular.svg" alt="">
+                    <p class="uk-text-justify">Angular é um framework de desenvolvimento web open-source mantido pela Google e uma comunidade de desenvolvedores ativos. Ele é amplamente utilizado para construir aplicações web robustas, escaláveis e interativas. O Angular é escrito em TypeScript, uma versão superset do JavaScript, que adiciona recursos de tipagem estática e recursos adicionais para melhorar o desenvolvimento e a manutenção de código </p>
+                    <button class="uk-button uk-button-primary uk-width-1-1">saiba Mais</button>
+                </div>
+                <div>
+                    <div class="uk-card uk-card-body uk-card-default">
+                        <h3 class="uk-text-center">Poque aprende o Uikit?</h3>
+                        <img src="assets/uikit.svg" alt="" >
+                        <p class="uk-text-justify">UIKit é uma biblioteca de interface de usuário (UI) open-source que oferece uma ampla variedade de componentes e estilos pré-construídos para o desenvolvimento web. Ela foi desenvolvida pela equipe da YOOtheme, uma empresa especializada em temas e extensões para sites, e tem como objetivo facilitar a criação de interfaces modernas, atraentes e responsivas.</p>
+                        <button class="uk-button uk-button-primary uk-width-1-1">saiba Mais</button>
+                    </div>
+                </div>
+    
+                <div>
+                    <div class="uk-card uk-card-body uk-card-default">
+                        <h3 class="uk-text-center">Como intergrar o uikit em angular</h3>
+                        <img src="assets/intergrar.svg" alt="" >
+                        <p class="uk-text-justify">Para integrar o UIKit em um projeto Angular, você precisa seguir alguns passos simples para adicionar os arquivos de estilo (CSS) e scripts (JavaScript) do UIKit ao seu projeto. Vamos explicar o processo passo a passo durante o curso</p>
+                        <button class="uk-button uk-button-primary uk-width-1-1">saiba Mais</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Mobile listas de cursos-->
+    <div  class="uk-section uk-padding uk-border-rounded uk-section-primary uk-preserve-color uk-visible@s uk-hidden@m">
+        <div class="uk-container ">
+            <h1 id="oquevaiapender" class="uk-margin-large-bottom uk-text-large uk-text-bold uk-visible@s uk-hidden@m">O que vai aprender</h1><br>
+            <div class="uk-grid-small uk-child-width-1-1@m uk-visible@s uk-hidden@m" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500; repeat: true" uk-grid>
+                <div class="uk-card uk-card-body uk-card-default">
+                    <h3 class="uk-text-center">Poque aprende o Angular?</h3>
+                    <img src="assets/angular.svg" alt="">
+                    <p class="uk-text-justify">Angular é um framework de desenvolvimento web open-source mantido pela Google e uma comunidade de desenvolvedores ativos. Ele é amplamente utilizado para construir aplicações web robustas, escaláveis e interativas. O Angular é escrito em TypeScript, uma versão superset do JavaScript, que adiciona recursos de tipagem estática e recursos adicionais para melhorar o desenvolvimento e a manutenção de código </p>
+                    <button class="uk-button uk-button-primary uk-width-1-1">saiba Mais</button>
+                </div>
+                <div>
+                    <div class="uk-card uk-card-body uk-card-default">
+                        <h3 class="uk-text-center">Poque aprende o Uikit?</h3>
+                        <img src="assets/uikit.svg" alt="" >
+                        <p class="uk-text-justify">UIKit é uma biblioteca de interface de usuário (UI) open-source que oferece uma ampla variedade de componentes e estilos pré-construídos para o desenvolvimento web. Ela foi desenvolvida pela equipe da YOOtheme, uma empresa especializada em temas e extensões para sites, e tem como objetivo facilitar a criação de interfaces modernas, atraentes e responsivas.</p>
+                        <button class="uk-button uk-button-primary uk-width-1-1">saiba Mais</button>
+                    </div>
+                </div>
+    
+                <div>
+                    <div class="uk-card uk-card-body uk-card-default">
+                        <h3 class="uk-text-center">Como intergrar o uikit em angular</h3>
+                        <img src="assets/intergrar.svg" alt="" >
+                        <p class="uk-text-justify">Para integrar o UIKit em um projeto Angular, você precisa seguir alguns passos simples para adicionar os arquivos de estilo (CSS) e scripts (JavaScript) do UIKit ao seu projeto. Vamos explicar o processo passo a passo durante o curso</p>
+                        <button class="uk-button uk-button-primary uk-width-1-1">saiba Mais</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="uk-section uk-section-muted uk-padding uk-border-rounded uk-visible@l">
+        <div class="uk-container  uk-margin-top ">
         <div class="uk-grid uk-child-width-1-2@l" uk-grid>
             <div>
                 <h1>O programa para o angular</h1>
@@ -202,12 +264,152 @@
         </div>
         </div>
     </div>
+    
+    <!--Mobile lista-->
+    <div class="uk-section uk-section-muted uk-padding uk-border-rounded uk-visible@m uk-hidden@l">
+        <div class="uk-container  uk-margin-top ">
+        <div class="uk-grid-medium uk-child-width-1-1@m uk-align-center" uk-grid>
+            <div>
+                <h1>O programa para o angular</h1>
+                <ul class="uk-list uk-list-bullet ">
+                    <li>Introdução ao Angular
+                        <ul>
+                            <li> O que é Angular e por que é usado?</li>
+                            <li>Diferença entre AngularJS e Angula</li>
+                            <li>Visão geral da arquitetura e componentes principais</li>
+                        </ul>
+                    </li>
+                    <li>Configurando o Ambiente de Desenvolvimento
+                        <ul>
+                            <li> Instalação do Angular CLI (Command Line Interface).</li>
+                            <li>Criando um novo projeto Angular usando o Angular CLI.</li>
+                        </ul>
+                    </li>
+                    <li>Componentes e Templates
+                        <ul>
+                            <li> Criando e usando componentes em Angular</li>
+                            <li>Introdução aos templates e data binding.</li>
+                            <li>Interpolação, property binding e event binding</li>
+                        </ul>
+                    </li>
+                    <li>Diretivas
+                        <ul>
+                            <li>Entendendo e usando diretivas incorporadas</li>
+                            <li>Criando suas próprias diretivas personalizadas.</li>
+                        </ul>
+                    </li>
+                    <li>Serviços e Injeção de Dependências
+                        <ul>
+                            <li>Criando serviços para lidar com a lógica de negócios</li>
+                            <li>Injetando serviços em componentes.</li>
+                        </ul>
+                    </li>
+                    <li>Roteamento
+                        <ul>
+                            <li>
+                                Configurando rotas para criar aplicativos de página única (SPAs).
+                            </li>
+                            <li>Navegação entre componentes usando rotas</li>
+                        </ul>
+                    </li>
+                    <li>Formulários e Validação
+                        <ul>
+                            <li>Criação de formulários reativos e baseados em template</li>
+                            <li>Aplicando validação em campos de formulário</li>
+                        </ul>
+                    </li>
+                    <li>Comunicação com APIs RESTful
+                        <ul>
+                            <li>Fazendo chamadas HTTP para interagir com serviços externos</li>
+                            <li>Tratando respostas e erros de chamadas HTTP.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Gerenciamento de Estado com RxJS
+                        <ul>
+                            <li>Introdução aos conceitos de programação reativa com RxJS.</li>
+                            <li>Gerenciando o estado do aplicativo usando Observables</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Integração com Bibliotecas de Terceiros
+                        <ul>
+                            <li>Utilizando bibliotecas populares com Angular (por exemplo, Uikit).</li>
+                            <li>Criando módulos para encapsular bibliotecas externas</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h1>O programa para o uikit</h1>
+                <ul class="uk-list uk-list-bullet">
+                    <li>Introdução ao UIKit
+                        <ul>
+                            <li> O que é o UIKit e por que é usado?</li>
+                            <li>Principais características e vantagens da biblioteca.</li>
+                        </ul>
+                    </li>
+                    <li>Configurando o Ambiente de Desenvolvimento:
+                        <ul>
+                            <li>Como instalar e importar o UIKit em um projeto</li>
+                            <li>Entendendo a estrutura do projeto UIKit</li>
+                        </ul>
+                    </li>
+                    <li>Componentes e Estilos
+                        <ul>
+                            <li> Usando componentes básicos, como botões, barras de navegação, menus e tabelas</li>
+                            <li>Estilização de componentes usando classes CSS</li>
+                        </ul>
+                    </li>
+                    <li>Responsividade
+                        <ul>
+                            <li>Criando layouts responsivos com o grid system do UIKit</li>
+                            <li>Utilizando classes CSS para adaptar a interface a diferentes tamanhos de tela</li>
+                        </ul>
+                    </li>
+                    <li>Animações e Efeitos
+                        <ul>
+                            <li>Adicionando animações e transições aos componentes do UIKit</li>
+                            <li>Utilizando efeitos visuais pré-construídos para melhorar a experiência do usuário</li>
+                        </ul>
+                    </li>
+                    <li>Diretivas do UIKit
+                        <ul>
+                            <li>
+                                Explorando as diretivas incorporadas do UIKit
+                            </li>
+                            <li> Criando diretivas personalizadas para estender o comportamento dos componentes</li>
+                        </ul>
+                    </li>
+                    <li>Personalização e Temas
+                        <ul>
+                            <li>Personalizando os estilos do UIKit para atender às necessidades do projeto</li>
+                            <li>Utilizando temas prontos ou criando temas personalizados</li>
+                        </ul>
+                    </li>
+                    <li>Acessibilidade
+                        <ul>
+                            <li>Práticas recomendadas para tornar a interface do usuário do UIKit acessível para todos os usuários</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Integração com Angular (ou outro framework)
+                        <ul>
+                            <li>Introdução aos conceitos de programação reativa com RxJS.</li>
+                            <li>Gerenciando o estado do aplicativo usando Observables</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        </div>
+    </div>
     <div class="uk-container  uk-margin-top">
         <div class="uk-section uk-section-muted uk-padding uk-border-rounded">
-        <div class="uk-grid uk-child-width-1-2@l" uk-grid>
+        <div class="uk-grid uk-child-width-1-2@l uk-grid uk-child-width-1-1@m uk-text-center" uk-grid>
             <div>
                 <h1>O que já fizemos com essas framework</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima earum quia quos excepturi, dolorem alias id reiciendis expedita laborum officiis, pariatur distinctio debitis! Dolore aspernatur pariatur dicta nemo, ea hic?
+                <p class="uk-text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima earum quia quos excepturi, dolorem alias id reiciendis expedita laborum officiis, pariatur distinctio debitis! Dolore aspernatur pariatur dicta nemo, ea hic?
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, sapiente temporibus iusto sit accusamus repellat minus, sint eum minima dicta quae officia provident. Aliquam molestias nobis asperiores quasi vero!
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellendus, nihil laboriosam nisi totam, soluta iusto fugiat voluptate illum itaque delectus alias! Ex, deleniti? Laboriosam maiores quasi vero voluptate culpa!
                 </p>
@@ -218,5 +420,8 @@
         </div>
         </div>
     </div>
+
+    <!--o mobile-->
+    
 </body>
 </html>
